--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,56 @@
-h1 {
-  color: blue;
-}
+
+      .container {
+        background: #ffebd3;
+        padding: 50px 50px;
+        border-radius: 38px;
+        box-shadow: 0 0.125rem 0.25rem rgba(#264e70, 0.075);
+        color: #679186;
+        margin-top: 50px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-weight: 200px;
+        border: 1px solid #264e70;
+        border-color: #264e70;
+      }
+
+      .enterLocation {
+        position: relative;
+        display: inline-block;
+        margin-top: unset;
+        vertical-align: middle;
+        width: 300px;
+        margin: 40px;
+      }
+      .citySubmit {
+        display: inline-block;
+        color: white;
+      }
+      .todaysTemp {
+        position: relative;
+        text-align: right;
+        vertical-align: top;
+        margin-bottom: 40px;
+        padding-top: 20px;
+        box-sizing: border-box;
+      }
+      .hourly {
+        display: block;
+        float: right;
+        text-align: right;
+      }
+      .futureTemps {
+        text-align: center;
+      }
+      .partlycloudy,
+      .sunny,
+      .rainyday {
+        font-size: large;
+        color: #264e70;
+      }
+      .todaysSun {
+        font-size: xx-large;
+        display: block;
+        margin: 15px;
+        color: #264e70;
+      }
+   
